<resources>
    <string name="app_name">Assignment1</string>
    <string name="delbtn">C</string>
    <string name="btn2">2</string>
    <string name="btn1">1</string>
    <string name="btn3">3</string>
    <string name="plusbtn">+</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="minusbtn">-</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="multibtn">*</string>
    <string name="divbtn">/</string>
    <string name="option">ADVANCE - WITH HISTORY</string>
    <string name="equalSign">=</string>
    <string name="zerobtn">0</string>
</resources>