<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


        <TextView
            android:id="@+id/resultText"
            android:textSize="25sp"
            android:hint="Display calculation"
            android:layout_marginStart="30dp"
            android:textColor="@color/gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn1"
                android:textColor="@color/black"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn2"
                android:textColor="@color/black"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn3"
                android:textColor="@color/black"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/plusop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plusbtn"
                android:textColor="@color/black"
                android:textSize="20sp"/>

        </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn4"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn5"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn6"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/minusop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minusbtn"
            android:textColor="@color/black"
            android:textSize="20sp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn7"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn8"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn9"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/multiop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multibtn"
            android:textColor="@color/black"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/delbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delbtn"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zerobtn"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/equalsign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equalSign"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/divop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divbtn"
            android:textColor="@color/black"
            android:textSize="20sp"/>

    </LinearLayout>


    <Button
        android:id="@+id/option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/LightBlue"
        android:text="@string/option"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:onClick="optBtnClicked"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/historyText"
        android:textSize="25sp"
        android:textColor="@color/gray"
        android:singleLine="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    </LinearLayout>